--- a/index.html
+++ b/index.html
@@ -14,24 +14,12 @@
 </head>
 
 <body>
-    <!--navigation bar-->
     <header>
-        <div class="navbar_center">
+        <!--navigation bar-->
+        <nav class="nav-container"></nav>
 
-            <!--contact page link-->
-            <div class="navbar_text"><a href="contact.html" aria-label="Contact pink power">Contact</a></div>
-            <!--price page link-->
-            <div class="navbar_text"><a href="price.html" aria-label="Go to price section">Price</a></div>
-            <!--go to homepage link-->
-            <div class="navbar_text" id="pinkpower_text"><a href="index.html"
-                    aria-label="Go to pink power homepage">Pink
-                    Power</a></div>
-            <!--booking link-->
-            <div class="navbar_text"><a href="book.html" aria-label="Book appointment">Book</a></div>
-            <!--start membership link-->
-            <div class="navbar_text"><a href="joinpink.html"
-                    aria-label="start your membership at pink power section">join pink</a></div>
-        </div>
+
+
     </header>
 
     <footer>
