--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pink Power, safest gym for woman based in stockholm">
-    <meta name="keywords" content="gym, training, muscles, strong woman">
-    <meta name="author" content="Pink Power">
-    <link rel="stylesheet" href="homepage.css">
+    <meta name="keywords" content="traval, flights, italy, dolomites">
+    <!-- fave icon -->
+    <link rel="icon" type="image/png" href="homepage/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="homepage/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="homepage/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="homepage/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="favicon/site.webmanifest" />
+    <!-- css style -->
+    <link rel="stylesheet" href="src/css/main.css">
 
     <title>Pink Power</title>
 
