--- a/index.html
+++ b/index.html
@@ -6,23 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pink Power, safest gym for woman based in stockholm">
     <meta name="keywords" content="traval, flights, italy, dolomites">
+    <!-- title -->
+    <title>Dolomites</title>
     <!-- fave icon -->
-    <link rel="icon" type="image/png" href="homepage/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="homepage/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="homepage/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="homepage/favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="favicon/site.webmanifest" />
-    <!-- css style -->
+    <link rel="icon" type="image/png" href="homepage/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="homepage/favicon/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="homepage/favicon/apple-touch-icon.png">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Pirata+One&display=swap" rel="stylesheet">
+
+    <!-- css stylesheet -->
     <link rel="stylesheet" href="src/css/main.css">
 
-    <title>Pink Power</title>
 
 </head>
 
 <body>
     <header>
+        <a href="index.html">
+            <h1 id="web-logo">Dolomites</h1>
+        </a>
         <!--navigation bar-->
-        <nav class="nav-container"></nav>
 
 
 
