styled page name

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             <h1 id="web-logo">Dolomites</h1>
         </a>
         <!--navigation bar-->
+        <!-- input to toggle the menu -->
+        <input type="checkbox" id="toggle" name="toggle">
+        <label for="toggle" class="toggle-the-navbar">
+            <img src="homepage/menu_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="a menu icon">
+        </label>
 
 
 
