--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
         <!-- input to toggle the menu -->
         <input type="checkbox" id="toggle" name="toggle">
         <label for="toggle" class="toggle-the-navbar">
-            <img src="homepage/menu_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="a menu icon">
+            <img src="homepage/menu_33dp_000000_FILL0_wght400_GRAD0_opsz40.png" alt="a menu icon">
         </label>
+        <nav>
+            <ul class="menu-bar">
+                <li>Home</li>
+                <li>Contact</li>
+                <li>Give feedback</li>
+            </ul>
+        </nav>
 
 
 
