show/hidde navigation bar when clicked. section background

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 </head>
 
 <body>
-    <header>
+    <!--navigation bar-->
+    <header class="header-image">
         <a href="index.html">
-            <h1 id="web-logo">Dolomites</h1>
+            <img src="homepage/home_31dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="a home icon menu">
         </a>
-        <!--navigation bar-->
         <!-- input to toggle the menu -->
         <input type="checkbox" id="toggle" name="toggle">
         <label for="toggle" class="toggle-the-navbar">
@@ -36,16 +36,19 @@
         </label>
         <nav>
             <ul class="menu-bar">
-                <li>Home</li>
-                <li>Contact</li>
-                <li>Give feedback</li>
+                <li><a href="src/componts/contact.html">Contact</a></li>
+                <li><a href="src/componts/feedback.html">Give feedback</a></li>
             </ul>
         </nav>
-
-
-
     </header>
-
+    <!-- page content -->
+    <main>
+        <section id="intro-image">
+            <div>
+                <h1>Dolomites</h1>
+            </div>
+        </section>
+    </main>
     <footer>
 
     </footer>
