responsive background image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- page content -->
     <main>
         <section id="intro-image">
-            <div>
+            <div class="intro-text">
                 <h1>Dolomites</h1>
             </div>
         </section>
