space between menu icon and home icon

--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
 <body>
     <!--navigation bar-->
     <header class="header-image">
-        <a href="index.html">
-            <img src="homepage/home_31dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="a home icon menu">
-        </a>
         <!-- input to toggle the menu -->
         <input type="checkbox" id="toggle" name="toggle">
         <label for="toggle" class="toggle-the-navbar">
             <img src="homepage/menu_33dp_000000_FILL0_wght400_GRAD0_opsz40.png" alt="a menu icon">
         </label>
+
+        <a id="img" href="index.html">
+            <img src="homepage/home_31dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="a home icon menu">
+        </a>
+        <!-- menu bar list-->
         <nav>
             <ul class="menu-bar">
                 <li><a href="src/componts/contact.html">Contact</a></li>
