--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Pirata+One&display=swap" rel="stylesheet">
-
+    <!-- fontawesome link-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- css stylesheet -->
     <link rel="stylesheet" href="src/css/main.css">
 
@@ -49,6 +52,52 @@
             <div class="intro-text">
                 <h1>Dolomites</h1>
             </div>
+        </section>
+        <section id="adventure">
+            <div>
+                <h3>Are you looking for your next adventure? </h3>
+                <p>Dolomites is not just good for you, it's perfect.
+                    There are so many activities to choose from. Here are summed up things to do
+                </p>
+            </div>
+        </section>
+        <section id="list-to-do">
+            <div class="list-container">
+                <div>
+                    <h3>seceda <i class="fa-solid fa-mountain"></i></h3>
+                    <h5>Do you like hiking? perfect</h5>
+                    <p>Here you will not just hike, it is a perfect place for view, you will feel like you are cloude.
+                        sitting 2500 m above sea level, a
+                        very breath taking place</p>
+                </div>
+                <div>
+                    <h3>Lago Di Braise <i class="fa-solid fa-water"></i></h3>
+                    <p>This is a iconic place you can visit while in Dolomites, becuase of it beautiful lake and
+                        boardwalk. Don't miss out, with the surrounding mountains will leave your jaw dropped</p>
+                </div>
+                <div>
+                    <h3>Cortina D'ampezzo <i class="fa-solid fa-city"></i></h3>
+                    <h5>Okey so you want to take a break and eat some warm pizza?</h5>
+                    <p>
+                        This is like a beating heart of all the Dolomites, with it's beautiful town, you will not just
+                        eat best pizza but you will be stunned by it gothic style buildings.
+                    </p>
+                </div>
+                <div>
+                    <h3>Tre cime di lavaredo <i class="fa-solid fa-tree"></i></h3>
+                    <p>You don't want to miss this during your time in Dolomites.
+                        National park, sayless. This is the best place walk, around those increndible
+                        three pinnacles
+                        and enjoy
+                        nature
+                    </p>
+                </div>
+                <div>
+                    <h3>Cadini di misurina <i class="fa-solid fa-person-hiking"></i></h3>
+
+                </div>
+            </div>
+
         </section>
     </main>
     <footer>
