styled the to do list, hidden overflow

--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
         </section>
         <section id="list-to-do">
             <div class="list-container">
-                <div class="sub-list">
+                <div class="list-seceda bottom-space">
                     <h3>seceda <i class="fa-solid fa-mountain"></i></h3>
-                    <h5>Do you like hiking? perfect</h5>
-                    <p>Here you will not just hike, it is a perfect place for view, you will feel like you are cloude.
+                    <p> Do you like hiking? perfect, here you will not just hike, it is a perfect place for view, you
+                        will feel like you are cloude.
                         sitting 2500 m above sea level, a
                         very breath taking place</p>
                 </div>
-                <div class="sub-list">
+                <div class="list-lagi-di-braise bottom-space">
                     <h3>Lago Di Braise <i class="fa-solid fa-water"></i></h3>
                     <p>This is a iconic place you can visit while in Dolomites, becuase of it beautiful lake and
                         boardwalk. Don't miss out, with the surrounding mountains will leave your jaw dropped</p>
                 </div>
-                <div class="sub-list">
+                <div class="list-cortina bottom-space">
                     <h3>Cortina D'ampezzo <i class="fa-solid fa-city"></i></h3>
                     <h5>Okey so you want to take a break and eat some warm pizza?</h5>
                     <p>
@@ -83,7 +83,7 @@
                         eat best pizza but you will be stunned by it gothic style buildings.
                     </p>
                 </div>
-                <div class="sub-list">
+                <div class="list-lavaredo bottom-space">
                     <h3>Tre cime di lavaredo <i class="fa-solid fa-tree"></i></h3>
                     <p>You don't want to miss this during your time in Dolomites.
                         National park, sayless. This is the best place walk, around those increndible
@@ -92,7 +92,7 @@
                         nature
                     </p>
                 </div>
-                <div class="sub-list">
+                <div class="list-cadini bottom-space">
                     <h3>Cadini di misurina <i class="fa-solid fa-person-hiking"></i></h3>
                     <p>Hike to peak of mountain, this is perfect. on the top of the mountain you won't just get surprise
                         by the wonderfull backdrops but a whole 360 degree veiws all around you. You won't be
