paragraph space under. image to file

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="list-end">
                     <h2><i class="fa-regular fa-face-smile-wink"></i></h2>
-                    <p>So go ahead and boke the flight</p>
+                    <p>So go ahead and boke the flight!!</p>
                 </div>
             </div>
 
