feedback form, image and styled homepage

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="keywords" content="traval, flights, italy, dolomites">
     <!-- title -->
     <title>Dolomites</title>
-    <!-- fave icon -->
+    <!-- favicon -->
     <link rel="icon" type="image/png" href="homepage/favicon/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/svg+xml" href="homepage/favicon/favicon.svg">
+    <link rel="shortcut icon" href="homepage/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="homepage/favicon/apple-touch-icon.png">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -100,7 +101,9 @@
                     </p>
 
                 </div>
-                <h2 class="list-end">So go ahead and boke the flight!!</h2>
+                <div>
+                    <h2 class="list-end">So go ahead and boke the flight!!</h2>
+                </div>
             </div>
 
         </section>
@@ -113,7 +116,7 @@
                 </a>
             </li>
             <li>
-                <a href="index.html" aria-label="home page">
+                <a href="#intro-image" aria-label="home page">
                     <i class="fa-solid fa-up-long"></i></a>
             </li>
             <li>
