--- a/src/componts/feedback.html
+++ b/src/componts/feedback.html
@@ -25,12 +25,16 @@
 </head>
 
 <body id="form-background">
-    <main>
-        <section id="form-container">
-            <form action="https://formdump.codeinstitute.net" method="post" id="feedback">
-                <fieldset id="feedback-form"></fieldset>
-            </form>
-        </section>
+    <main id="main-form">
+
+        <form action="https://formdump.codeinstitute.net" method="post" id="feedback">
+            <fieldset id="feedback-form">
+                <h5>Please let us know what you think about Dolomites recondation<i class="fa-solid fa-heart"></i></h5>
+                <label for=""></label>
+
+            </fieldset>
+        </form>
+
     </main>
 
 </body>
