--- a/src/componts/feedback.html
+++ b/src/componts/feedback.html
@@ -29,7 +29,7 @@
         <div class="feedback-header">
             <ul>
                 <li>
-                    <a href="/index.html">
+                    <a href="">
                         <img src="/homepage/home_31dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="">
                     </a>
                 </li>
