--- a/src/componts/feedback.html
+++ b/src/componts/feedback.html
@@ -30,7 +30,7 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="/homepage/home_31dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                        <img src="../img/home_31dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="a home menu icon">
                     </a>
                 </li>
             </ul>
