--- a/src/componts/feedback.html
+++ b/src/componts/feedback.html
@@ -29,7 +29,7 @@
         <div class="feedback-header">
             <ul>
                 <li>
-                    <a href="">
+                    <a href="/index.html">
                         <img src="../img/home_31dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="a home menu icon">
                     </a>
                 </li>
