modified linking file

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <i class="fa-solid fa-up-long"></i></a>
             </li>
             <li>
-                <a href="/src/componts/feedback.html" aria-label="give feedback form">
+                <a href="src/componts/feedback.html" aria-label="give feedback form">
                     <i class="fa-solid fa-handshake"></i>
                 </a>
             </li>
