--- a/src/componts/feedback.html
+++ b/src/componts/feedback.html
@@ -68,6 +68,15 @@
         </div>
 
     </main>
+    <footer>
+        <ul class="footer-link">
+            <li>
+                <a href="/index.html">
+                    <img src="/homepage/home_31dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                </a>
+            </li>
+        </ul>
+    </footer>
 
 </body>
 
