contact file not needed. added image, display only on larger screen 1024px up

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
         <!-- menu bar list-->
         <nav>
             <ul class="menu-bar">
-                <li><a href="src/componts/contact.html">Contact</a></li>
                 <li><a href="src/componts/feedback.html">Give feedback</a></li>
             </ul>
         </nav>
@@ -69,12 +68,14 @@
                     <p> Do you like hiking? perfect, here you will not just hike, it is a perfect place for view, you
                         will feel like you are cloude.
                         sitting 2500 m above sea level, a
-                        very breath taking place</p>
+                        very breath taking place</p><br> <img src="./src/img/pexels-pixabay-461944.jpg" alt="a mountain"
+                        class="self-top">
                 </div>
                 <div class="list-lagi-di-braise bottom-space" id="botton-space">
                     <h3>Lago Di Braise <i class="fa-solid fa-water"></i></h3>
                     <p>This is a iconic place you can visit while in Dolomites, becuase of it beautiful lake and
                         boardwalk. Don't miss out, with the surrounding mountains will leave your jaw dropped</p>
+                    <br> <img src="./src/img/pexels-eberhardgross-1387001.jpg" alt="stone mountain" class="top">
                 </div>
                 <div class="list-cortina bottom-space" id="botton-space">
                     <h3>Cortina D'ampezzo <i class="fa-solid fa-city"></i></h3>
@@ -83,6 +84,7 @@
                         This is like a beating heart of all the Dolomites, with it's beautiful town, you will not just
                         eat best pizza but you will be stunned by it gothic style buildings.
                     </p>
+                    <br><img src="./src/img/pexels-dreamypixel-554609.jpg" alt="hike park" class="top">
                 </div>
                 <div class="list-lavaredo bottom-space" id="botton-space">
                     <h3>Tre cime di lavaredo <i class="fa-solid fa-tree"></i></h3>
@@ -92,6 +94,7 @@
                         and enjoy
                         nature
                     </p>
+                    <br> <img src="./src/img/pexels-tomverdoot-3181458.jpg" alt="top of the mountain" class="top">
                 </div>
                 <div class="list-cadini bottom-space" id="botton-space">
                     <h3>Cadini di misurina <i class="fa-solid fa-person-hiking"></i></h3>
@@ -99,6 +102,7 @@
                         by the wonderfull backdrops but a whole 360 degree veiws all around you. You won't be
                         disapointeted
                     </p>
+                    <br> <img src="./src/img/pexels-eberhardgross-3389531.jpg" alt="mountain" class="cadini-image">
 
                 </div>
                 <div>
