modified link to homepage

--- a/src/componts/feedback.html
+++ b/src/componts/feedback.html
@@ -29,7 +29,7 @@
         <div class="feedback-header">
             <ul>
                 <li>
-                    <a href="index.html">
+                    <a href="/index.html">
                         <img src="../img/home_31dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="a home menu icon">
                     </a>
                 </li>
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="user-feeback-message">
-                        <textarea name="userfeeback" type="text" id="feedbackmessage" autocomplete="off"
+                        <textarea name="userfeedback" type="text" id="feedbackmessage" autocomplete="off"
                             placeholder="Write your feedback"></textarea>
                         <br>
                         <input type="submit" value="Send">
